Edit Title and comment

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="icon" href="./pp.png">
 
-    <title>React App</title>
+    <title>Pp's page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
